--- a/WebApplication3/Css/StyleSheet1.css
+++ b/WebApplication3/Css/StyleSheet1.css
@@ -140,7 +140,7 @@ button {
 
 input[type=text], input[type=password] {
     padding: 12px 20px;
-    margin: 8px 0;
+    margin: 40px 0 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
